# Fl_deployment

./: .gitignore  Dockerfile  Dockerfile.cpu  LICENSE  README.md  ca.crt  client.key  docker-compose.deploy.yml  docker-compose.test.yml  dp_budget.py  env.example.yaml  experiment_results.csv  full_log_20251210_182048.txt  ingest.py  metrics_20251210_182048.csv  pyproject.toml  run_all.py  run_distributed.sh  run_ec2.py  run_tests.py  smoke.yaml  validate_manifest.py
benchmarks/: README.md  __init__.py
clientapp/: __init__.py
configs/: dev.yaml  production.yaml
data/: README.md
data/generators/: __init__.py  generate_all.py  sg_synthetic.py
deploy/: ARCHITECTURE.md  backup.sh  cluster.env.template  gen_certs.sh  gen_mtls_certs.sh  health_check.sh  rollback.sh  rotate_certs.sh  validate_config.sh
deploy/configs/: staging.yaml
deploy/distributed/: deploy.sh  docker-compose.superlink.yml  docker-compose.supernode.yml
deploy/docker/: Dockerfile.cpu  Dockerfile.gpu  docker-compose.deploy.yml  docker-compose.superlink.yml
deploy/microservices/: .env  README.md  (+4 more)
docker/: docker-compose.supernode.yml
docs/: Distributed_Deployment_Guide.md  FL_Deployment_Guide_Full.md  FL_Production_Technical_Reference.md  Healthcare_FL_Deployment_Guide.md  PET_Reference.md  configuration.md  cost-reporting.md  deployment.md  plan.md  quickstart.md  status.md  troubleshooting.md
experiments/: centralized_baseline.py  test_new_domains.py  validate_strategies.py
fl_common/: __init__.py  clientapp.py  data.py  dp.py  federated_adapter.py  scaffold.py  secagg.py  serverapp.py  strategies.py
fl_pets/: __init__.py  dp.py  he.py  mpc.py  psa.py  psi.py  secagg.py
privacy/: attack_suite.py  model_inversion.py  sweep_dp.py  test_peft.py  test_peft_proper.py  test_privacy.py
psa/: __init__.py  entity_alignment.py  psa.py
psi/: __init__.py  entity_alignment.py  psi.py
runbooks/: certificate_rotation.md  disaster_recovery.md  incident_response.md  new_client_onboarding.md
runners/: client_app.py  run_client.py  run_ec2.py  server_app.py  svc_audit.py  svc_dp.py  svc_model_registry.py  svc_psa.py
scenarios/: chest_production.yaml  custom_dataset.yaml  dp_tradeoff.yaml  full_benchmark.yaml  noniid_impact.yaml  privacy_attacks.yaml  quick_fraud.yaml  quick_sepsis.yaml  split_sepsis.yaml  strategy_showdown.yaml  transfer_chest.yaml  vfl_fraud.yaml
scripts/: diagnose.sh  preflight.sh
secagg/: __init__.py  config.yaml
secure_inference/: __init__.py  demo_functional_encryption.py  demo_paillier.py  demo_secret_sharing.py  demo_tee.py  resources.md  tenseal_inference.py
serverapp/: __init__.py
tasks/hfl/chest_xray/: pyproject.toml
tasks/sepsis/: data.py  pyproject.toml
templates/: data_manifest.yaml  dataset_card.md  federation_agreement.md  model_card.md  training_manifest.yaml
tests/: run_all.py  run_tests.py  test_anonlink_psa.py  test_psa_multiparty.py  test_psa_singapore.py  test_psa_singapore_10k.py
tutorials/: README.md  demo_all_paradigms.ipynb
(+112 files in other folders)
