[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "chest-xray-fl"
version = "0.1.0"
dependencies = [
    "flwr[simulation]>=1.13",
    "torch>=2.2",
    "torchvision>=0.17",
    "numpy<2",
    "scikit-learn",
    "pandas",
    "pillow",
]

[tool.flwr.app]
publisher = "healthcare"

[tool.flwr.app.components]
serverapp = "server_app:app"
clientapp = "client_app:app"

[tool.flwr.app.config]
strategy = "IID"
num-rounds = "2"
num-clients = "2"

[tool.flwr.federations]

[tool.flwr.federations.local-sim]
options.num-supernodes = 2
options.backend.client-resources.num-cpus = 1
options.backend.client-resources.num-gpus = 0.0

[tool.flwr.federations.local-deployment]
address = "127.0.0.1:9090"
insecure = true
